--- a/net-proxy-core/pom.xml
+++ b/net-proxy-core/pom.xml
@@ -3,18 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>net-nnts</artifactId>
+        <artifactId>net-proxy</artifactId>
         <groupId>tech.pcloud</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>net-nnts-core</artifactId>
+    <artifactId>net-proxy-core</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>tech.pcloud</groupId>
-            <artifactId>net-nnts-message</artifactId>
+            <artifactId>net-proxy-message</artifactId>
         </dependency>
         <dependency>
             <groupId>tech.pcloud</groupId>
