--- a/net-proxy-server/pom.xml
+++ b/net-proxy-server/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>net-nnts</artifactId>
+        <artifactId>net-proxy</artifactId>
         <groupId>tech.pcloud</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>net-nnts-client</artifactId>
+    <artifactId>net-proxy-server</artifactId>
 
     <dependencies>
         <!--<dependency>-->
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>tech.pcloud</groupId>
-            <artifactId>net-nnts-core</artifactId>
+            <artifactId>net-proxy-core</artifactId>
         </dependency>
         <dependency>
             <groupId>tech.pcloud</groupId>
@@ -38,16 +38,13 @@
         </dependency>
         <dependency>
             <groupId>tech.pcloud</groupId>
-            <artifactId>framework-spring-boot-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>tech.pcloud</groupId>
             <artifactId>framework-netty-handler</artifactId>
         </dependency>
     </dependencies>
 
+
     <build>
-        <finalName>nnts-client-${project.version}</finalName>
+        <finalName>nnts-server-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -72,7 +69,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>tech.pcloud.nnts.client.Startup</mainClass>
+                    <mainClass>tech.pcloud.nnts.server.Startup</mainClass>
                 </configuration>
             </plugin>
         </plugins>
