--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>tech.pcloud</groupId>
-    <artifactId>net-nnts</artifactId>
+    <artifactId>net-proxy</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
-        <module>net-nnts-server</module>
-        <module>net-nnts-core</module>
-        <module>net-nnts-message</module>
-        <module>net-nnts-client</module>
+        <module>net-proxy-server</module>
+        <module>net-proxy-core</module>
+        <module>net-proxy-message</module>
+        <module>net-proxy-client</module>
     </modules>
 
     <properties>
@@ -35,17 +35,17 @@
         <dependencies>
             <dependency>
                 <groupId>tech.pcloud</groupId>
-                <artifactId>net-nnts-core</artifactId>
+                <artifactId>net-proxy-core</artifactId>
                 <version>${nnts.version}</version>
             </dependency>
             <dependency>
                 <groupId>tech.pcloud</groupId>
-                <artifactId>net-nnts-message</artifactId>
+                <artifactId>net-proxy-message</artifactId>
                 <version>${nnts.version}</version>
             </dependency>
             <dependency>
                 <groupId>tech.pcloud</groupId>
-                <artifactId>net-nnts-server</artifactId>
+                <artifactId>net-proxy-server</artifactId>
                 <version>${nnts.version}</version>
             </dependency>
 
