--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>tech.pcloud</groupId>
@@ -13,7 +11,10 @@
         <module>net-proxy-core</module>
         <module>net-proxy-message</module>
         <module>net-proxy-client</module>
-    </modules>
+    <module>net-proxy-store</module>
+    <module>net-proxy-configure</module>
+    <module>net-proxy-network</module>
+  </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -45,6 +46,21 @@
             <dependency>
                 <groupId>tech.pcloud</groupId>
                 <artifactId>net-proxy-server</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>tech.pcloud</groupId>
+                <artifactId>net-proxy-store</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>tech.pcloud</groupId>
+                <artifactId>net-proxy-configure</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>tech.pcloud</groupId>
+                <artifactId>net-proxy-network</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
