add new function

--- a/net-proxy-configure/net-proxy-configure-xml/net-proxy-configure-xml-client/pom.xml
+++ b/net-proxy-configure/net-proxy-configure-xml/net-proxy-configure-xml-client/pom.xml
@@ -3,12 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>net-proxy-configure</artifactId>
+        <artifactId>net-proxy-configure-xml</artifactId>
         <groupId>tech.pcloud</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>net-proxy-configure-core</artifactId>
+    <artifactId>net-proxy-configure-xml-client</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>tech.pcloud</groupId>
+            <artifactId>net-proxy-configure-xml-core</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
