--- a/net-proxy-store/net-proxy-store-filesystem/pom.xml
+++ b/net-proxy-store/net-proxy-store-filesystem/pom.xml
@@ -3,12 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>net-proxy-configure</artifactId>
+        <artifactId>net-proxy-store</artifactId>
         <groupId>tech.pcloud</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>net-proxy-configure-core</artifactId>
+    <artifactId>net-proxy-store-filesystem</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>tech.pcloud</groupId>
+            <artifactId>net-proxy-store-core</artifactId>
+        </dependency>
+    </dependencies>
 </project>
