--- a/net-proxy-configure/pom.xml
+++ b/net-proxy-configure/pom.xml
@@ -6,6 +6,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>net-proxy-configure-core</module>
+        <module>net-proxy-configure-xml</module>
     </modules>
     <parent>
         <groupId>tech.pcloud</groupId>
@@ -22,6 +23,10 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>tech.pcloud</groupId>
+            <artifactId>net-proxy-core</artifactId>
         </dependency>
     </dependencies>
 </project>
