add new function

--- a/net-proxy-configure/net-proxy-configure-xml/net-proxy-configure-xml-server/pom.xml
+++ b/net-proxy-configure/net-proxy-configure-xml/net-proxy-configure-xml-server/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>net-proxy-configure-xml-server</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>tech.pcloud</groupId>
+            <artifactId>net-proxy-configure-xml-core</artifactId>
+        </dependency>
+    </dependencies>
 </project>
