add new function

--- a/net-proxy-network/net-proxy-network-client/pom.xml
+++ b/net-proxy-network/net-proxy-network-client/pom.xml
@@ -16,5 +16,9 @@
             <groupId>tech.pcloud</groupId>
             <artifactId>net-proxy-network-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+        </dependency>
     </dependencies>
 </project>
