--- a/net-proxy-network/net-proxy-network-core/pom.xml
+++ b/net-proxy-network/net-proxy-network-core/pom.xml
@@ -20,5 +20,9 @@
             <groupId>tech.pcloud</groupId>
             <artifactId>net-proxy-configure-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>tech.pcloud</groupId>
+            <artifactId>framework-netty-handler</artifactId>
+        </dependency>
     </dependencies>
 </project>
