--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
                 <artifactId>jaxb-core</artifactId>
                 <version>2.2.11</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
+            <dependency>
+                <groupId>org.reflections</groupId>
+                <artifactId>reflections</artifactId>
+                <version>0.9.11</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
