--- a/net-proxy-network/net-proxy-network-core/pom.xml
+++ b/net-proxy-network/net-proxy-network-core/pom.xml
@@ -24,5 +24,9 @@
             <groupId>tech.pcloud</groupId>
             <artifactId>framework-netty-handler</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+        </dependency>
     </dependencies>
 </project>
