--- a/net-proxy-client/pom.xml
+++ b/net-proxy-client/pom.xml
@@ -44,6 +44,20 @@
             <groupId>tech.pcloud</groupId>
             <artifactId>framework-netty-handler</artifactId>
         </dependency>
+
+
+        <dependency>
+            <groupId>tech.pcloud</groupId>
+            <artifactId>net-proxy-configure-xml-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>tech.pcloud</groupId>
+            <artifactId>net-proxy-network-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>tech.pcloud</groupId>
+            <artifactId>net-proxy-store-filesystem</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
