--- a/net-proxy-server/src/main/resources/application.properties
+++ b/net-proxy-server/src/main/resources/application.properties
@@ -1,37 +1,2 @@
-nat.nnts.server.port=18080
-nat.nnts.server.name=PrimaryServer
-nat-nnts-server.backlog=100
-
-#DATASOURCE
-#spring.datasource.url=jdbc:sqlite:node.db
-#spring.datasource.username=
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.sqlite.JDBC
-
-#DATASOURCE
-spring.datasource.druid.name=serverdb
-spring.datasource.druid.url=jdbc:derby:serverdb;create=true
-spring.datasource.druid.username=
-spring.datasource.druid.password=
-#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
-spring.datasource.druid.initialSize=5
-spring.datasource.druid.minIdle=5
-spring.datasource.druid.maxActive=20
-spring.datasource.druid.maxWait=60000
-spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
-spring.datasource.druid.minEvictableIdleTimeMillis=300000
-spring.datasource.druid.filters=stat
-spring.datasource.druid.validationQuery=select 1 from sysibm.sysdummy1
-spring.datasource.druid.testWhileIdle=true
-spring.datasource.druid.testOnBorrow=false
-spring.datasource.druid.testOnReturn=false
-spring.datasource.druid.poolPreparedStatements=true
-spring.datasource.druid.maxOpenPreparedStatements=20
-spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-
-
-# MYBATIS
-mybatis.typeAliasesPackage=tech.pcloud.proxy.core.model
-
-nnts.cache.name=server
+spring.profiles.active=dev
+logging.config=classpath:log4j2.xml
