--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
         </dependencies>
     </dependencyManagement>
 
-    <!--<repositories>
+    <repositories>
         <repository>
             <snapshots>
                 <enabled>true</enabled>
@@ -192,5 +192,5 @@
             <id>self-snapshots</id>
             <url>https://maven.pandong.online/content/repositories/maven-snapshots</url>
         </snapshotRepository>
-    </distributionManagement>-->
+    </distributionManagement>
 </project>
