--- a/net-proxy-configure/pom.xml
+++ b/net-proxy-configure/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>tech.pcloud</groupId>
         <artifactId>net-proxy</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
     <artifactId>net-proxy-configure</artifactId>
 
