--- a/net-proxy-store/pom.xml
+++ b/net-proxy-store/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>tech.pcloud</groupId>
         <artifactId>net-proxy</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
     <artifactId>net-proxy-store</artifactId>
     <packaging>pom</packaging>
