--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>tech.pcloud</groupId>
     <artifactId>net-proxy</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <modules>
         <module>net-proxy-server</module>
         <module>net-proxy-core</module>
@@ -28,7 +28,7 @@
         <connection>scm:git:https://github.com/pandong2015/net-proxy.git</connection>
         <url>https://github.com/pandong2015/net-proxy</url>
         <developerConnection>scm:git:https://github.com/pandong2015/net-proxy.git</developerConnection>
-        <tag>v0.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
